[project]
name = "hybrid-search-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "pinecone-client>=6.0.0",
    "pinecone-notebooks>=0.1.1",
    "pinecone-text>=0.11.0",
    "python-dotenv>=1.2.2",
]
